--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <meta name="author" content="">
 
     <title>One Million Lines</title>
-
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
-    <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 
 
     <!-- Custom styles for this template -->
@@ -19,29 +18,78 @@
   </head>
 
   <body>
-
-    <nav>
+    <header>
+        <div class="container">
+          <nav>
       <!-- Votre code ici -->
-    </nav>
+            <ul>
+              <li id="logo"><a href="">onemillionlines_</a></li>  <li><a href="">who we are</a></li>
+              <li><a href="">get involved</a></li>
+            </ul>
+    
+          </nav>
+        </div> <!-- container close -->
+    </header>
 
     <div id="home">
-      <!-- Votre code ici -->
-    </div>
+      <div class="container">
+          <div id="home-inner">
+            <h1>Our goal is to inspire Tallahasse to write 1,000,000 lines of code_</h1>
+
+            <p>All over the country people are taking the <span>HOUR OF CODE</span> challenge issued by <span>CODE.org</span>. Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal is to writ 1,000,000 lines of code_</p>
+
+            <button id="LM">Learn more »</button>
+            <img src="images/code.png">
+
+          </div><!--home-inner-->
+      </div> <!-- container close -->
+    </div> <!-- home -->
 
     <div id="who">
+      <div class="container">
       <!-- Votre code ici -->
-    </div><!-- /#who -->
+        <h2 id="M">Who we are</h2>
+        <hr>
+        <p>We are <span>MASSIVE Academy</span>. We aim to improve aducation through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
+      </div><!-- /#who -->
+    </div> <!-- container close -->
 
     <div id="get-involved">
-      <!-- Votre code ici -->
-    </div><!-- /#get-involved -->
+      <div class="container">
+          <!-- Votre code ici -->
+        <h2>Get involved</h2>
+        <hr>
+          <div class="box">
+            <h2>STUDENTS</h2>
+            <p>Want to learn how to code? Want to help us get to 1,000,000 lines? Click the buttton below and we'll let you know how to get involved.</p>
+            <button id="SL">Start Learning »</button>
+          </div> <!--box-->
+
+          <div class="box">
+            <h2>EDUCATORS</h2>
+            <p>Want to bring this initiative to your school or institution? Awesome! Click the button below and we'll make it happen.</p>
+            <button id="JTI">Join The Initiative »</button>
+          </div> <!-- box -->
+
+          <div class="box">
+            <h2>SPONSORS</h2>
+            <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. <br>Click to get involved.</p>
+            <button id="GS">Give Support »</button>
+            </div> <!--box-->
+
+      </div> <!-- /#get-involved -->
+    </div> <!-- container close -->
 
     <footer>
+      <div class="container">
       <!-- Votre code ici -->
+        <img id="logodown" src="images/one-million-bottom-brand.png">
+      </div> <!-- container close -->
     </footer>
 
     <div id="back-to-top">
       <!-- Votre code ici -->
+
     </div><!-- /#back-to-top -->
 
   </body>
